# chameleon

./: .gitignore  README.md
agentd/: go.mod  go.sum  policy.yaml  ss.sh
agentd/cmd/agentd/: main.go
agentd/cmd/client_test/: main.go
agentd/cmd/signer/: main.go
agentd/internal/composer/: composer.go
agentd/internal/config/: config.go
agentd/internal/decision/: engine.go
agentd/internal/honeypot/: manager.go
agentd/internal/ml/: client.go
agentd/internal/rules/: rules.go  types.go
agentd/internal/server/: server.go
agentd/internal/tarpit/: tarpit.go
agentd/internal/telemetry/: forwader.go
agentd/internal/templates/: loader.go
agentd/proto/: chameleon.pb.go  chameleon.proto  chameleon_grpc.pb.go
agentd/rules/: bruteforce.yaml  sql.yaml  xss.yaml
agentd/templates/: sql_error_1064.json
agentic/: Dockerfile  engine.py  main.py  pyproject.toml
agentic/tools/: defense.py  intel.py  ops.py
dashboard/agent-tester/: Dockerfile  app.py
dashboard/aggregator/: Dockerfile  package.json  report.json  server.js
dashboard/aggregator/backend/: package-lock.json  package.json  server.js
dashboard/aggregator/frontend/: package-lock.json  package.json
demo-app/: app.js  package-lock.json  package.json
honeypot-templates/mysql-admin/: Dockerfile  dynamic.go  go.mod  go.sum  main.go
infra/: ci_scan.sh  docker-bkp.yaml  docker-compose.yml
ml/: Dockerfile  requirements.txt  service.py
ml/v2/1st/: logistic_multiattack.onnx  predict_multiattack.py  svm_multiattack.onnx  tfidf_vectorizer.onnx
sdk-node/: index.js  package-lock.json  package.json
(+22 files in other folders)
